--- a/package.json
+++ b/package.json
@@ -4,16 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass ./sass/main.scss:./public/css/style.css -w",
-    "prefix": "postcss -w ./public/css/style.css --user autoprefixer -d ./public/css/prefixed/"
+    "sassprod": "sass ./sass/main.scss:./public/css/style.css -w --style=compressed",
+    "sassdev": "sass ./sass/main.scss:./public/css/style.css -w",
+    "prefix": "postcss -w ./public/css/style.css --user autoprefixer -d ./public/css/prefixed/",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^10.4.4",
+    "core-js": "^3.23.2",
     "google-font-installer": "^1.2.0",
     "postcss": "^8.4.12",
     "postcss-cli": "^9.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "babel-loader": "^8.2.5",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   }
 }
